<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.toshiwa.MainActivity"
    android:orientation="vertical"
    android:paddingRight="12dp"
    android:paddingLeft="12dp"
    android:paddingTop="12dp"
    tools:showIn="@layout/app_bar_main">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
         >
        <LinearLayout
            android:id="@+id/ll_emp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="4dp"
                >
              <include layout="@layout/img_slider_layout"/>
            </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp"
        android:padding="12dp"
        >

        <android.support.v7.widget.CardView
            android:id="@+id/z"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
           app:contentPadding="8dp"
            android:foreground="?attr/selectableItemBackground"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@null"
            >

            <com.toshiwa.CustomView.TextView_Regular
                android:id="@+id/tv_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Welcome, "
                android:textSize="18sp"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:padding="14dp"
                >

                <com.toshiwa.CustomView.TextView_Bold
                    android:id="@+id/tv_display_leads"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="4dp"
                    android:layout_weight="1"
                    android:background="@drawable/gradient_pink"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingBottom="8dp"
                    android:paddingTop="8dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:clickable="true"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <com.toshiwa.CustomView.TextView_Bold
                    android:id="@+id/tv_add_leads"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text=""
                    android:gravity="center"
                    android:clickable="true"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:layout_gravity="center"
                    android:textSize="14sp"
                    android:background="@drawable/gradient_pink"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />


            </LinearLayout>

        </LinearLayout>



        </android.support.v7.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="18dp"
        android:layout_marginTop="4dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"

        >
        <android.support.v7.widget.CardView
            android:id="@+id/a"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            android:foreground="?selectableItemBackgroundBorderless"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue"
            android:padding="4dp"
            >

            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/purchase"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="normal" />

        </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/b"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            app:cardBackgroundColor="@color/colorHoloGreen"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp"
            android:background="@drawable/gradient_green"
            >


            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/approvals"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="normal" />

        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/c"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            app:cardBackgroundColor="@color/colorHoloGreen"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue"
            android:padding="4dp"
            >

            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/material"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="normal" />


        </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="4dp"

        >
        <android.support.v7.widget.CardView
            android:id="@+id/d"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            app:cardBackgroundColor="@color/colorHoloGreen"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue"
            android:padding="4dp"
            >

            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/execution"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textStyle="normal"
                />


        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/e"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            app:cardBackgroundColor="@color/colorHoloGreen"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_green"
            android:padding="4dp"
            >
            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/completion"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textStyle="normal"
                />



        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/f"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            app:cardBackgroundColor="@color/colorHoloGreen"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue"
            android:padding="4dp"
            >
            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/msedcl_bill"
                android:gravity="center"
                android:textSize="10sp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:textStyle="normal"
                />


        </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="12dp"
        >
        <android.support.v7.widget.CardView
            android:id="@+id/g"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="2"
            android:layout_marginLeft="4dp"
            app:cardBackgroundColor="@color/colorHoloGreen"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue"
            android:padding="4dp"
            >

            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/account"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textStyle="normal"
                />


        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/h"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            app:cardBackgroundColor="@color/colorHoloGreen"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_green"
            android:padding="4dp"
            >
            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/meter_reading"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textStyle="normal"
                />


        </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/i"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginLeft="4dp"
            app:cardBackgroundColor="@color/colorHoloGreen"
            app:cardElevation="4dp"
            android:layout_margin="4dp"
            app:cardCornerRadius="6dp"
            >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/gradient_blue"
            android:padding="4dp"
            >
            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/service"
                android:gravity="center"
                android:textSize="10sp"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:layout_weight="1"
                />


        </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    </ScrollView>


</LinearLayout>