<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@drawable/gradient_green"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:fitsSystemWindows="true"
    android:focusableInTouchMode="true"
    tools:context="com.toshiwa.Activity.LoginActivity">

    <!-- Login progress -->
  <include layout="@layout/loading"/>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

    <LinearLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="18dp"
            android:layout_gravity="center"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"
            android:background="@drawable/round"
            android:padding="4dp"
            />

            <com.toshiwa.CustomView.TextView_Regular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                />
        </LinearLayout>

        <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/l1_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_edittext_login"
                        android:orientation="vertical"
                        android:padding="12dp">

                        <com.toshiwa.CustomView.Autocomplete_Light
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:maxLength="10"
                            android:imeActionLabel="Next"
                            android:background="@color/white"
                            android:textColor="@color/black"
                            android:textColorHint="@color/light_gray"
                            android:textCursorDrawable="@drawable/edittext_cursor"
                            android:singleLine="true"
                            android:textSize="16dp"
                            />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/l1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border_edittext_login"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:padding="12dp">

                        <com.toshiwa.CustomView.Edittext_Light
                            android:id="@+id/password"
                            android:background="@null"
                            android:enabled="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                             android:singleLine="true"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@color/black"
                            android:textColorHint="@color/light_gray"
                            android:textCursorDrawable="@drawable/edittext_cursor"
                            android:textSize="16dp"/>


                    </LinearLayout>

                <Button
                android:id="@+id/email_sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_in"
                android:background="@drawable/btn_emp"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:imeOptions="actionDone"
                />

                </LinearLayout>

      <!--  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:weightSum="5"
                >
                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:background="@color/cool_white"/>
                <com.toshiwa.CustomView.TextView_Light
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="OR"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0.5dp"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:background="@color/cool_white"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/l1_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="2dp">

                <com.toshiwa.CustomView.TextView_Regular
                    android:id="@+id/forget"
                    android:enabled="true"
                    android:text="Forget Password ?"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp"
                    />


            </LinearLayout>

        </LinearLayout>-->


        </LinearLayout>

    </ScrollView>

</LinearLayout>
